DTSCCI-3132 merge conflicts builder removal