@@ -73,15 +73,14 @@ class ClaimNotifiedEventStrategyTest {
 
         when(sequenceGenerator.nextSequence(any())).thenReturn(15);
 
-        EventHistory.EventHistoryBuilder builder = EventHistory.builder();
+        EventHistory builder = new EventHistory();
         strategy.contribute(builder, caseData, null);
 
-        EventHistory history = builder.build();
-        assertThat(history.getMiscellaneous()).hasSize(1);
-        assertThat(history.getMiscellaneous().get(0).getEventSequence()).isEqualTo(15);
-        assertThat(history.getMiscellaneous().get(0).getDateReceived())
+        assertThat(builder.getMiscellaneous()).hasSize(1);
+        assertThat(builder.getMiscellaneous().getFirst().getEventSequence()).isEqualTo(15);
+        assertThat(builder.getMiscellaneous().getFirst().getDateReceived())
             .isEqualTo(LocalDateTime.of(2024, 2, 1, 10, 15));
-        assertThat(history.getMiscellaneous().get(0).getEventDetailsText())
+        assertThat(builder.getMiscellaneous().getFirst().getEventDetailsText())
             .isEqualTo("Claimant has notified defendant.");
     }
 }
